<resources>
    <string name="app_name">Echo</string>

    <string name="prompt_address">ADDRESS</string>
    <string name="prompt_title">TITLE</string>
    <string name="button_transport_text">Transport</string>
    <string name="button_delivery_text" >Delivery</string>
    <string name="button_household_text">Household</string>
    <string name="button_other_text">Other</string>
    <string name="task_notes">TASK NOTES</string>
    <string name="prompt_details">Details…</string>
    <string name="button_task_now">Continue</string>
    <string name="button_task_later">Later</string>
    <string name="new_task">New Task</string>
    <string name="saved_tasks">Saved Tasks</string>
    <string name="default_button_text">button</string>
    <string name="prompt_time">Time</string>
    <string name="button_set_recurring_text">Set as Recurring</string>
    <string name="button_text_recent">Save as Recent</string>
    <string name="confirm">Confirm</string>
    <string name="task_list_title">Task List</string>
    <string name="text_task_in_progress">Task in Progress</string>
    <string name="user_rating">Rating</string>

    <!-- For Task Current -->
    <string name="searching_assistant">Searching for an Assistant near you…</string>
    <string name="unknown_user">Unknown</string>
    <string name="empty_phone_number">(No phone number)</string>

    <!-- Strings related to the map home screens -->
    <string name="new_task_home_button">New Task</string>
    <string name="current_task_home_button">View Current Task</string>

    <!-- Strings related to logging in -->
    <string name="prompt_username">Enter username…</string>
    <string name="sign_in_button">Sign in</string>
    <string name="prompt_assistant">Assistant?</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="prompt_phone_number">Enter phone number…</string>
    <string name="invalid_assistant_or_ap">Login Failed! Are you sure about your assistant status?</string>
    <string name="invalid_phone_number">Phone number is incorrect. Please make sure you\'re entering a valid, numerical phone number.</string>
    <string name="invalid_user_name">Please enter a valid username.</string>
    <string name="successful_login">Successful Login!</string>

    <string name="action_submit_rating">Submit Rating</string>

    <!-- Strings related to helper screens -->
    <string name="helper_prompt_button">\?</string>
    <string name="helper_dismiss_button">OK</string>
    <string name="login_help_text">
        This screen allows you to sign in to the app. How to use:\n\n
        1. Enter your username into the text box. Your username must be at least %d characters long.\n\n
        2. Enter your phone number below your username.\n\n
        3. If you\'re an assistant, check the \'%s\' box. If you\'re a person in need of an assistant (assisted person, or AP), leave the checkbox blank.\n\n
        4. Press the \'%s\' button.
    </string>
    <string name="home_help_text">
        This screen lets you do several things.\n
        If you\'ve not yet started a task, you can create one with the \'%s\' button at the bottom.\n
        If you already have, you can press the \'%s\' button at the bottom to view its details.\n
        Your position will appear as a blue marker. If you have a task in progress and an assistant
        helping you, they will have a green maker indicating their current position.
    </string>
    <string name="task_current_helper_text">
        This screen lets you view the current task that you have asked for assistance with.
        Until your task has been accepted by an assistant, this screen will simply display the details you wrote for the task\n
        Once an assistant has accepted your task, their details is displayed near the middle of the screen, including their name and phone number.
        You can press the left call button to initiate a call to your assistant.
        You can also press the speech bubble on the right to begin a text chat session with your assistant.
    </string>

    <!-- Strings related to chat messaging screen -->
    <string name="message_prompt">"Enter message…"</string>

    <!-- Strings related to account screen -->
    <string name="user_assistant_text">"Assistant"</string>

    <!-- Intent extras values -->
    <string name="chat_partner">chat_partner</string>

    <!-- Firebase strings -->
    <string name="user_is_assistant">isAssistant</string>
    <string name="users_root">users</string>
    <string name="tasks_root">tasks</string>
    <string name="messages_root">messages</string>
    <string name="task_id">taskID</string>
    <string name="phone_number_child">phoneNumber</string>
    <string name="message_time">messageTime</string>
    <string name="message_text">messageText</string>
    <string name="message_receiver">receiver</string>
    <string name="message_sender">sender</string>

    <string name="accept_task">accept</string>
    <string name="loading_task">Loading Task…</string>

    <!--Payment-->
    <string name = "title"> Payment Summary </string>
    <string name="prompt_home_address">Home Address (Optional)</string>
    <string name="prompt_home_address_change">Please enter your new home address:</string>
    <string name="change_address">Change Address</string>

</resources>
