<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textAssistantTaskListActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_task_in_progress"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="@dimen/echoApHuge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textAssistantTaskListTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/prompt_title"
        android:textSize="@dimen/echoApLarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAssistantTaskListActivity" />

    <TextView
        android:id="@+id/textAssistantTaskListAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/prompt_address"
        android:textSize="@dimen/echoApLarge"
        app:layout_constraintEnd_toEndOf="@+id/textAssistantTaskListTitle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textAssistantTaskListTitle"
        app:layout_constraintTop_toBottomOf="@+id/textAssistantTaskListTitle"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textAssistantTaskListTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/prompt_time"
        android:textSize="@dimen/echoApMedium"
        app:layout_constraintEnd_toEndOf="@+id/textAssistantTaskListAddress"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textAssistantTaskListAddress"
        app:layout_constraintTop_toBottomOf="@+id/textAssistantTaskListAddress" />

    <TextView
        android:id="@+id/textAssistantTaskListNotesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/task_notes"
        app:layout_constraintBottom_toTopOf="@+id/textAssistantTaskListNotes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAssistantTaskListTime" />

    <TextView
        android:id="@+id/textAssistantTaskListNotes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textAssistantTaskListNotesTitle"
        app:layout_constraintTop_toBottomOf="@+id/textAssistantTaskListNotesTitle"
        app:layout_constraintBottom_toTopOf="@id/buttonAcceptTask"/>

    <Button
        android:id="@+id/buttonAcceptTask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/accept_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAssistantTaskListNotes" />

</android.support.constraint.ConstraintLayout>