<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/taskCurrentHelperButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:clickable="true"
        android:src="@android:drawable/ic_menu_help"
        android:tint="?attr/actionMenuTextColor"
        app:backgroundTint="?attr/colorBackgroundFloating"
        app:fabSize="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textTaskInProgressActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_task_in_progress"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="@dimen/echoApHuge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textTaskInProgressTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/prompt_title"
        android:textSize="@dimen/echoApLarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTaskInProgressActivity" />

    <TextView
        android:id="@+id/textTaskInProgressAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/prompt_address"
        android:textSize="@dimen/echoApLarge"
        app:layout_constraintEnd_toEndOf="@+id/textTaskInProgressTitle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textTaskInProgressTitle"
        app:layout_constraintTop_toBottomOf="@+id/textTaskInProgressTitle"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textTaskInProgressTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/prompt_time"
        android:textSize="@dimen/echoApMedium"
        app:layout_constraintBottom_toTopOf="@id/avatarContainer"
        app:layout_constraintEnd_toEndOf="@+id/textTaskInProgressAddress"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textTaskInProgressAddress"
        app:layout_constraintTop_toBottomOf="@+id/textTaskInProgressAddress"
        app:layout_constraintVertical_bias="0.0" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/isReadyLayer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/avatarContainer"
        app:layout_constraintEnd_toEndOf="@id/avatarContainer"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/avatarContainer"
        app:layout_constraintTop_toTopOf="@id/avatarContainer">

        <TextView
            android:id="@+id/searchingMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/searching_assistant"
            android:textSize="@dimen/echoApMedium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/avatarContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/textTaskInProgressNotesTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTaskInProgressTime">


        <TextView
            android:id="@+id/userName"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/unknown_user"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textIsSelectable="true"
            android:textSize="@dimen/echoAssistantLarge"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/userPhone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/avatarImage"
            app:layout_constraintTop_toTopOf="@+id/avatarImage" />

        <TextView
            android:id="@+id/userPhone"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/empty_phone_number"
            android:textIsSelectable="true"
            android:textSize="@dimen/echoAssistantMedium"
            app:layout_constraintBottom_toTopOf="@+id/userRating"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/avatarImage"
            app:layout_constraintTop_toBottomOf="@id/userName" />


        <TextView
            android:id="@+id/userRating"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/user_rating"
            android:textIsSelectable="true"
            android:textSize="@dimen/echoAssistantSmall"
            app:layout_constraintBottom_toBottomOf="@+id/avatarImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/avatarImage"
            app:layout_constraintTop_toBottomOf="@id/userPhone" />


        <ImageView
            android:id="@+id/avatarImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            app:layout_constraintBottom_toTopOf="@+id/callButton"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/common_google_signin_btn_icon_dark_normal" />

        <ImageView
            android:id="@+id/callButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/messagingButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avatarImage"
            app:srcCompat="@android:drawable/ic_menu_call" />

        <ImageView
            android:id="@+id/messagingButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="8dp"
            android:adjustViewBounds="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/callButton"
            app:layout_constraintTop_toBottomOf="@+id/avatarImage"
            app:srcCompat="@android:drawable/sym_action_chat" />
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/textTaskInProgressNotesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/task_notes"
        app:layout_constraintBottom_toTopOf="@id/textTaskInProgressNotes"
        app:layout_constraintTop_toBottomOf="@id/avatarContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textTaskInProgressNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textTaskInProgressNotesTitle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textTaskInProgressNotesTitle"
        app:layout_constraintTop_toBottomOf="@+id/textTaskInProgressNotesTitle" />

</android.support.constraint.ConstraintLayout>